did service and component updates

--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,34 +1,28 @@
-<div class="row m-3">
+<div class="row m-3" *ngFor="let book of books; let ind=index">
 
   <div class="col-md-4 col-lg-3 col-sm-1">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-          <a>Book Title 1</a>
+    <div class="card card-default">
+      <div class="card-heading">
+        <h3 class="card-title">
+          <a>{{book.title}}</a>
         </h3>
       </div>
-      <div class="panel-body text-center">
-        <h6 class="card-subtitle mb-2 text-muted">Book Subtitle</h6>
+      <div class="card-body text-center">
+        <h6 class="card-subtitle mb-2 text-muted">{{ book.subTitle }}</h6>
         <div class="card-text">
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 1
-          </span>
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 2
-          </span>
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 3
+          <span class="mr-1 badge badge-pill badge-secondary" *ngFor="let cat of book.categories">
+            {{ cat }}
           </span>
         </div>
       </div>
       <img class="book-thumbnail"
-           src="http://lorempixel.com/g/200/300/"
+           [src]="book.thumbnail"
            alt="">
-      <div class="panel-footer">
+      <div class="card-footer">
         <span>
           by
           <span>
-            Asim Hussain
+            {{ book.authors }}
           </span>
         </span>
       </div>
@@ -36,34 +30,28 @@
   </div>
 
   <div class="col-md-4 col-lg-3 col-sm-1">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-          <a>Book Title 2</a>
+    <div class="card card-default">
+      <div class="card-heading">
+        <h3 class="card-title">
+          <a>{{book.title}}</a>
         </h3>
       </div>
-      <div class="panel-body text-center">
-        <h6 class="card-subtitle mb-2 text-muted">Book Subtitle</h6>
+      <div class="card-body text-center">
+        <h6 class="card-subtitle mb-2 text-muted">{{ book.subTitle }}</h6>
         <div class="card-text">
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 1
-          </span>
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 2
-          </span>
-          <span class="mr-1 badge badge-pill badge-default">
-            Category 3
+          <span class="mr-1 badge badge-pill badge-secondary" *ngFor="let cat of book.categories">
+            {{ cat }}
           </span>
         </div>
       </div>
       <img class="book-thumbnail"
-           src="http://lorempixel.com/g/200/300/"
+           [src]="book.thumbnail"
            alt="">
-      <div class="panel-footer">
+      <div class="card-footer">
         <span>
           by
           <span>
-            Asim Hussain
+            {{ book.authors }}
           </span>
         </span>
       </div>
