--- a/src/app/pager/pager.component.html
+++ b/src/app/pager/pager.component.html
@@ -1,4 +1,4 @@
-<nav>
+<footer>
   <ul class="pager">
     <li>
       <a> &larr; Previous
@@ -9,4 +9,4 @@
       </a>
     </li>
   </ul>
-</nav>
+</footer>
