--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="m-3 text-center">
-    <form class="form-inline">
+    <form class="form-inline" (ngSubmit)="doSearch(searchItem.value)">
       <div class="form-group">
         <input type="search"
                class="form-control"
                placeholder="Enter search string"
                name="search"
+               #searchItem
                required>
       </div>
       <button type="submit"
@@ -16,19 +17,12 @@
     <hr />
 
     <div class="text-center">
-      <!-- TODO: Show when we are calling the API -->
-      <p class="lead">Loading...</p>
-
-      <!-- TODO: Show when no results are returned from the API -->
-      <p class="lead">No results returned</p>
-
-      <!-- TODO: Show when the user hasn't performed a search yet -->
-      <p class="lead">Enter a search string above and press search</p>
+      <p class="lead">{{ searchStatus }}</p>      
     </div>
   </div>
 
   <!-- TODO: Show the results of the search -->
-  <app-book-list></app-book-list>
+  <app-book-list [books]="books"></app-book-list>
 
   <div class="d-flex justify-content-center">
     <!-- TODO: Show pagnation -->
