--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 <div class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <a href="/"
-         class="navbar-brand">BookShelf
+         class="navbar-brand" routerLink="">BookShelf
       </a>
       <button class="navbar-toggle"
               type="button"
@@ -15,14 +16,15 @@
     </div>
     <div class="navbar-collapse collapse"
          id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link">Search</a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" [routerLinkActive]="['active']">
+          <a class="nav-link" routerLink="search">Search</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link">Library</a>
+        <li class="nav-item" [routerLinkActive]="['active']">
+          <a class="nav-link" routerLink="library">Library</a>
         </li>
       </ul>
     </div>
   </div>
 </div>
+</nav>
