--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,50 +1,46 @@
 <div class="row m-3">
   <div class="col-md-6 col-md-offset-3">
-    <h2 class="text-center">Book Title</h2>
+    <h2 class="text-center">{{ book.title }}</h2>
 
-    <h6 class="text-center">Book Subtitle</h6>
+    <h6 class="text-center">{{ book.subTitle }}</h6>
 
     <div class=" m-3">
       <img class="rounded center-block"
-           src="http://lorempixel.com/g/200/300/">
+           [src]="book.thumbnail">
     </div>
 
 
     <dl>
-      <dt>Description</dt>
+      <dt>{{ book.description }}</dt>
       <dd>
         <p [innerHtml]="'Hello this is the book <strong>description</strong> by binding to [innerHtml] we can use HTML tags'"></p>
       </dd>
 
-      <dt>Authors</dt>
-      <dd>Asim Hussain</dd>
+      <dt>{{ book.authors }}</dt>
 
       <dt>Categories</dt>
       <dd>
-        <span class="mr-1 badge badge-pill badge-default">
-          Category 1
-        </span>
-        <span class="mr-1 badge badge-pill badge-default">
-          Category 2
-        </span>
-        <span class="mr-1 badge badge-pill badge-default">
-          Category 3
+        <span class="mr-1 badge badge-pill badge-default" *ngFor="let cat of book.categories">
+         {{ cat }}
         </span>
       </dd>
 
       <dt>Published Date</dt>
-      <dd>2017-01-01</dd>
+      <dd>{{ book.publishedDate}}</dd>
 
-      <dt>Publisher</dt>
-      <dd>Code Craft</dd>
+      <dt>{{ book.publisher }}</dt>
     </dl>
 
     <p>
       <button type="button"
-              class="btn btn-primary">Add To Library
+              class="btn btn-primary" (click)="addBook(book)"
+              [class.disabled]="hasBook(book)"
+      >Add To Library
       </button>
       <button type="button"
-              class="btn btn-default">Remove From Library
+              class="btn btn-default" (click)="removeBook(book)"              
+              [class.disabled]="!hasBook(book)"
+      >Remove From Library
       </button>
     </p>
 
